<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentTwo"
    android:background="@color/black">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/backToStartActivity"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:text="@string/Arrow_up"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:backgroundTint="#FFEFCD25"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">

        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/String_enterTheData"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:errorEnabled="true"
            android:layout_marginTop="25dp">

            <EditText
                android:id="@+id/editName"
                android:layout_width="300dp"
                android:layout_height="48sp"
                android:hint="@string/String_name"
                android:textColorHint="#888888"
                android:textColor="@color/white"
                android:textSize="14sp"


                android:inputType="text">
            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ageError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:errorEnabled="true">
            <EditText
                android:id="@+id/age"
                android:layout_width="300dp"
                android:layout_height="48sp"
                android:hint="@string/String_age"
                android:textColorHint="#888888"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_gravity="start"
                android:inputType="number">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/heightError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_gravity="center">
            <EditText
                android:id="@+id/height"
                android:layout_width="300dp"
                android:layout_height="48sp"
                android:hint="@string/String_height"
                android:textColorHint="#888888"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:inputType="numberDecimal">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weightError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:errorEnabled="true">
            <EditText
                android:id="@+id/weight"
                android:layout_width="300dp"
                android:layout_height="48sp"
                android:hint="@string/String_weigth"
                android:textColorHint="#888888"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_gravity="end"
                android:inputType="numberDecimal">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnSaveProfile"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/String_save"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:backgroundTint="#FFEFCD25"
            android:layout_gravity="center">

        </Button>

    </LinearLayout>

</FrameLayout>